feat: add icon to Stock Market Investing Guide for enhanced visual representation

--- a/trading/introduction.mdx
+++ b/trading/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Stock Market Investing Guide'
 description: 'A structured foundation in stock market investing from core principles to long-term strategies'
+icon: 'chart-candlestick'
 ---
 
 <div className="flex items-center gap-2 mb-6 text-sm text-slate-500">
