fix: update icons for Brokers, Stock Market Investing Guide, and Major Stock Exchanges for improved visual consistency

--- a/trading/fundamentals/brokers.mdx
+++ b/trading/fundamentals/brokers.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Brokers & Trading Platforms'
 description: 'Complete guide to choosing the right broker and trading platform for your investment journey'
-icon: 'building-columns'
+icon: 'piggy-bank'
 ---
 
 <div className="flex items-center gap-2 mb-6 text-sm text-slate-500 dark:text-slate-400">
