--- a/trading/introduction.mdx
+++ b/trading/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Stock Market Investing Guide'
 description: 'A structured foundation in stock market investing from core principles to long-term strategies'
-icon: 'chart-candlestick'
+icon: 'chart-area'
 ---
 
 <div className="flex items-center gap-2 mb-6 text-sm text-slate-500">
