--- a/trading/markets/stock-exchanges.mdx
+++ b/trading/markets/stock-exchanges.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Major Stock Exchanges'
 description: 'Comprehensive guide to the world leading stock exchanges including NYSE, NASDAQ, and Vietnam markets'
-icon: 'building-office'
+icon: 'landmark'
 ---
 
 <div className="flex items-center gap-2 mb-6 text-sm text-slate-500 dark:text-slate-400">
