fix: update icons to clock for improved consistency across trading documentation

--- a/trading/markets/market-regimes.mdx
+++ b/trading/markets/market-regimes.mdx
@@ -5,7 +5,7 @@ icon: 'chart-mixed'
 ---
 
 <div className="flex items-center gap-2 mb-6 text-sm text-slate-500 dark:text-slate-400">
-  <Icon icon="chart-mixed" size={16} />
+  <Icon icon="clock" size={16} />
   <span>10 min read</span>
   <span>•</span>
   <span>Last updated: January 2025</span>
