--- a/trading/strategies/trading-strategies.mdx
+++ b/trading/strategies/trading-strategies.mdx
@@ -5,7 +5,7 @@ icon: 'chess-king'
 ---
 
 <div className="flex items-center gap-2 mb-6 text-sm text-slate-500 dark:text-slate-400">
-  <Icon icon="chess-king" size={16} />
+  <Icon icon="clock" size={16} />
   <span>18 min read</span>
   <span>•</span>
   <span>Last updated: January 2025</span>
