--- a/trading/fundamentals/risk-management.mdx
+++ b/trading/fundamentals/risk-management.mdx
@@ -5,7 +5,7 @@ icon: 'shield-check'
 ---
 
 <div className="flex items-center gap-2 mb-6 text-sm text-slate-500 dark:text-slate-400">
-  <Icon icon="shield-check" size={16} />
+  <Icon icon="clock" size={16} />
   <span>15 min read</span>
   <span>•</span>
   <span>Last updated: January 2025</span>
