--- a/trading/markets/stock-exchanges.mdx
+++ b/trading/markets/stock-exchanges.mdx
@@ -5,7 +5,7 @@ icon: 'landmark'
 ---
 
 <div className="flex items-center gap-2 mb-6 text-sm text-slate-500 dark:text-slate-400">
-  <Icon icon="building-office" size={16} />
+  <Icon icon="clock" size={16} />
   <span>12 min read</span>
   <span>•</span>
   <span>Last updated: January 2025</span>
