--- a/trading/market-fundamentals.mdx
+++ b/trading/market-fundamentals.mdx
@@ -5,131 +5,20 @@ icon: 'chart-line'
 ---
 
 <div className="flex items-center gap-2 mb-6 text-sm text-slate-500 ">
-  <Icon icon="clock" size={16} />
   <span>20 min read</span>
   <span>•</span>
   <span>Comprehensive Guide</span>
-  <span>•</span>
   <span>Last updated: January 2025</span>
 </div>
 
-<div className="bg-slate-900 p-8 rounded-xl border border-slate-800 my-8">
-  <div className="flex items-center gap-4 mb-6">
-    <div className="w-12 h-12 bg-slate-700 rounded-xl flex items-center justify-center">
-      <Icon icon="chart-line" size={24} className="text-white" />
-    </div>
-    <div>
-      <h1 className="text-2xl font-bold text-slate-100">Understanding Market Fundamentals</h1>
-      <p className="text-slate-400">Essential concepts every investor needs to master</p>
-    </div>
-  </div>
 
-  <div className="space-y-4 text-slate-300">
-    <p className="text-lg leading-relaxed">
-      Market fundamentals form the bedrock of successful investing. These core concepts help you understand how markets work, why prices move, and how to make informed investment decisions based on economic reality rather than speculation.
-    </p>
-
-    <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
-      <h4 className="text-slate-200 font-semibold mb-2">What You'll Learn</h4>
-      <p className="text-sm">
-        This comprehensive guide covers sector analysis, economic indicators, market cycles, and the psychological factors that drive market movements. Master these fundamentals to invest with confidence and clarity.
-      </p>
-    </div>
-  </div>
-</div>
 
 ## Market Sectors: The Building Blocks of the Economy
 
-<div className="bg-slate-900 p-6 rounded-xl border border-slate-800 mb-8">
-  <h3 className="text-xl font-bold text-slate-100 mb-4">Understanding Sector Rotation</h3>
-  <p className="text-slate-300 mb-4">
-    The stock market is divided into 11 major sectors, each responding differently to economic conditions. Understanding sector rotation—the movement of investment capital from one sector to another—can significantly improve your investment timing and returns.
-  </p>
-
-  <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
-    <h4 className="text-slate-200 font-semibold mb-2">Why Sector Analysis Matters</h4>
-    <p className="text-slate-400 text-sm">
-      Different sectors thrive at different points in the economic cycle. Technology may lead during expansion, while utilities often outperform during contractions. Smart investors adjust their sector allocation based on economic conditions.
-    </p>
-  </div>
-</div>
-
-<div className="bg-slate-900">
-  <div className="border-b border-slate-200   dark:bg-slate-800/50">
-    <div className="flex">
-      <button className="flex-1 px-6 py-4 text-sm font-medium text-slate-300  bg-slate-900  border-b-2 border-slate-600">
-        Best Performers
-      </button>
-      <button className="flex-1 px-6 py-4 text-sm font-medium text-slate-600  hover:bg-slate-50 ">
-        Laggards
-      </button>
-    </div>
-  </div>
-
-  <div className="p-6">
-    <div className="space-y-4">
-      <div className="flex items-center justify-between p-4 bg-slate-900  rounded-lg border border-slate-800 ">
-        <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
-            <span className="text-white text-sm font-bold">T</span>
-          </div>
-          <div>
-            <div className="font-semibold text-slate-100 ">Technology</div>
-            <div className="text-sm text-slate-300 ">AI Revolution, Cloud Growth</div>
-          </div>
-        </div>
-        <div className="text-right">
-          <div className="text-xl font-bold text-slate-300 ">+28.5%</div>
-        </div>
-      </div>
-
-      <div className="flex items-center justify-between p-4 bg-slate-900  rounded-lg border border-slate-800 ">
-        <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
-            <span className="text-white text-sm font-bold">C</span>
-          </div>
-          <div>
-            <div className="font-semibold text-slate-100 ">Communication</div>
-            <div className="text-sm text-slate-300 ">5G Expansion, Streaming</div>
-          </div>
-        </div>
-        <div className="text-right">
-          <div className="text-xl font-bold text-slate-300 ">+22.1%</div>
-        </div>
-      </div>
-
-      <div className="flex items-center justify-between p-4 bg-slate-900  rounded-lg border border-slate-800 ">
-        <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
-            <span className="text-white text-sm font-bold">CD</span>
-          </div>
-          <div>
-            <div className="font-semibold text-slate-100 ">Consumer Discretionary</div>
-            <div className="text-sm text-slate-300 ">Economic Recovery</div>
-          </div>
-        </div>
-        <div className="text-right">
-          <div className="text-xl font-bold text-slate-300 ">+18.7%</div>
-        </div>
-      </div>
-
-      <div className="flex items-center justify-between p-4 bg-slate-900  rounded-lg border border-slate-800 ">
-        <div className="flex items-center gap-3">
-          <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
-            <span className="text-white text-sm font-bold">F</span>
-          </div>
-          <div>
-            <div className="font-semibold text-slate-100 ">Financials</div>
-            <div className="text-sm text-slate-300 ">Rising Interest Rates</div>
-          </div>
-        </div>
-        <div className="text-right">
-          <div className="text-xl font-bold text-slate-300 ">+15.3%</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+- Technology: AI Revolution, Cloud Growth
+- Communication: 5G Expansion, Streaming
+- Consumer Discretionary: Economic Recovery
+- Financials: Rising Interest Rates
 
 ## Trading Volume Analysis
 
@@ -141,101 +30,52 @@ icon: 'chart-line'
       {/* Mermaid chart representation with modern styling */}
       <div className="flex items-end justify-between h-32 space-x-2">
         <div className="flex flex-col items-center">
-          <div className="w-8 h-24 bg-slate-800 to-indigo-400 rounded-t"></div>
-          <div className="text-xs text-slate-600  mt-2">9:30 AM</div>
-          <div className="text-xs text-slate-500 dark:text-slate-500">Opening</div>
+          <div className="w-8 h-24 bg-blue-500 rounded-t"></div>
+          <div className="text-xs text-blue-700 mt-2">9:30 AM</div>
+          <div className="text-xs text-blue-700">Opening</div>
         </div>
         <div className="flex flex-col items-center">
-          <div className="w-8 h-16 bg-slate-800 to-blue-400 rounded-t"></div>
-          <div className="text-xs text-slate-600  mt-2">10:30 AM</div>
-          <div className="text-xs text-slate-500 dark:text-slate-500">Morning</div>
+          <div className="w-8 h-16 bg-gray-200 rounded-t"></div>
+          <div className="text-xs text-gray-200 mt-2">10:30 AM</div>
+          <div className="text-xs text-gray-200">Morning</div>
         </div>
         <div className="flex flex-col items-center">
-          <div className="w-8 h-8 bg-gradient-to-t from-slate-400 to-slate-300 rounded-t"></div>
-          <div className="text-xs text-slate-600  mt-2">12:00 PM</div>
-          <div className="text-xs text-slate-500 dark:text-slate-500">Lunch</div>
+          <div className="w-8 h-8 bg-gray-400 rounded-t"></div>
+          <div className="text-xs text-gray-400 mt-2">12:00 PM</div>
+          <div className="text-xs text-gray-400">Lunch</div>
         </div>
         <div className="flex flex-col items-center">
-          <div className="w-8 h-16 bg-slate-800 to-emerald-400 rounded-t"></div>
-          <div className="text-xs text-slate-600  mt-2">2:00 PM</div>
-          <div className="text-xs text-slate-500 dark:text-slate-500">Afternoon</div>
+          <div className="w-8 h-16 bg-gray-200 rounded-t"></div>
+          <div className="text-xs text-gray-200 mt-2">2:00 PM</div>
+          <div className="text-xs text-gray-200">Afternoon</div>
         </div>
         <div className="flex flex-col items-center">
-          <div className="w-8 h-20 bg-slate-800 to-purple-400 rounded-t"></div>
-          <div className="text-xs text-slate-600  mt-2">3:00 PM</div>
-          <div className="text-xs text-slate-500 dark:text-slate-500">Power Hour</div>
+          <div className="w-8 h-20 bg-blue-500 rounded-t"></div>
+          <div className="text-xs text-blue-700 mt-2">3:00 PM</div>
+          <div className="text-xs text-blue-700">Power Hour</div>
         </div>
         <div className="flex flex-col items-center">
-          <div className="w-8 h-12 bg-slate-800 to-red-400 rounded-t"></div>
-          <div className="text-xs text-slate-600  mt-2">4:00 PM</div>
-          <div className="text-xs text-slate-500 dark:text-slate-500">Close</div>
+          <div className="w-8 h-12 bg-gray-200 rounded-t"></div>
+          <div className="text-xs text-gray-200 mt-2">4:00 PM</div>
+          <div className="text-xs text-gray-200">Close</div>
         </div>
       </div>
     </div>
 
     <div className="mt-6 grid grid-cols-2 md:grid-cols-3 gap-4 text-sm">
       <div className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-slate-700 rounded"></div>
-        <span className="text-slate-700 ">High Volume Periods</span>
+        <div className="w-3 h-3 bg-gray-400 rounded"></div>
+        <span className="text-gray-500">Low Volume Periods</span>
       </div>
+
       <div className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-slate-400 rounded"></div>
-        <span className="text-slate-700 ">Low Volume Periods</span>
+        <div className="w-3 h-3 bg-gray-200 rounded"></div>
+        <span className="text-gray-700">Moderate Volume</span>
       </div>
+
       <div className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-slate-700 rounded"></div>
-        <span className="text-slate-700 ">Moderate Volume</span>
-      </div>
-    </div>
-  </div>
-</div>
-
-## Investment Timeline Strategy
-
-<div className="space-y-6 my-8">
-  <div className="relative">
-    <div className="absolute left-4 top-8 bottom-0 w-0.5 bg-slate-800"></div>
-
-    <div className="space-y-8">
-      <div className="flex gap-6">
-        <div className="w-8 h-8 bg-slate-700 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
-          <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
-            <path fillRule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z" clipRule="evenodd" />
-          </svg>
-        </div>
-        <div className="flex-1 bg-slate-900  border border-slate-800  rounded-xl p-6">
-          <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #1: Emergency Fund (Month 1-3)</h4>
-          <p className="text-slate-300  mb-3">Save 3-6 months of expenses in high-yield savings account (4-5% APY)</p>
-          <div className="bg-slate-800/50 p-3 rounded-lg">
-            <span className="font-semibold text-slate-100 ">Recommended Amount:</span>
-            <span className="text-slate-300 "> $15,000 - $30,000 for most individuals</span>
-          </div>
-        </div>
-      </div>
-
-      <div className="flex gap-6">
-        <div className="w-8 h-8 bg-slate-700 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
-          <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
-            <path d="M4 4a2 2 0 00-2 2v1h16V6a2 2 0 00-2-2H4z" />
-            <path fillRule="evenodd" d="M18 9H2v5a2 2 0 002 2h12a2 2 0 002-2V9zM4 13a1 1 0 011-1h1a1 1 0 110 2H5a1 1 0 01-1-1zm5-1a1 1 0 100 2h1a1 1 0 100-2H9z" clipRule="evenodd" />
-          </svg>
-        </div>
-        <div className="flex-1 bg-slate-900  border border-slate-800  rounded-xl p-6">
-          <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #2: High-Interest Debt (Month 1-6)</h4>
-          <p className="text-slate-300 ">Pay off credit cards (18-25% interest) before investing in stocks (8-10% expected)</p>
-        </div>
-      </div>
-
-      <div className="flex gap-6">
-        <div className="w-8 h-8 bg-slate-700 rounded-full flex items-center justify-center flex-shrink-0 relative z-10">
-          <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
-            <path fillRule="evenodd" d="M12 7a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0V8.414l-4.293 4.293a1 1 0 01-1.414 0L8 10.414l-4.293 4.293a1 1 0 01-1.414-1.414l5-5a1 1 0 011.414 0L11 10.586 14.586 7H12z" clipRule="evenodd" />
-          </svg>
-        </div>
-        <div className="flex-1 bg-slate-900  border border-slate-800  rounded-xl p-6">
-          <h4 className="font-bold text-gray-800 dark:text-gray-200 mb-2">Priority #3: Begin Investing (Month 6+)</h4>
-          <p className="text-slate-300 ">Start with broad market index funds, then gradually learn individual stock analysis</p>
-        </div>
+        <div className="w-3 h-3 bg-blue-500 rounded"></div>
+        <span className="text-blue-700">High Volume Periods</span>
       </div>
     </div>
   </div>
@@ -244,40 +84,37 @@ icon: 'chart-line'
 ## Risk vs Return Spectrum
 
 <div className="my-8">
-  <div className="bg-gradient-to-r bg-slate-900  p-8 rounded-xl border border-slate-200 ">
-    <h3 className="text-center font-bold text-xl text-slate-200 mb-6">Investment Risk-Return Profile</h3>
-
-    <div className="flex justify-between items-end h-40 mb-6">
-      <div className="text-center group">
-        <div className="w-16 h-10 bg-gradient-to-t from-emerald-600 to-emerald-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 ">Savings<br/>1-2%</div>
+  <div className="p-4 rounded-lg">
+    <div className="flex justify-between items-end mb-4">
+      <div className="text-center flex flex-col items-center">
+        <div className="w-12 h-8 bg-blue-200 rounded-t mb-1"></div>
+        <div className="text-xs font-semibold text-blue-200">Savings</div>
       </div>
-      <div className="text-center group">
-        <div className="w-16 h-20 bg-gradient-to-t from-blue-600 to-blue-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 ">Bonds<br/>3-5%</div>
+      <div className="text-center flex flex-col items-center">
+        <div className="w-12 h-16 bg-blue-400 rounded-t mb-1"></div>
+        <div className="text-xs font-semibold text-blue-400">Bonds</div>
       </div>
-      <div className="text-center group">
-        <div className="w-16 h-24 bg-gradient-to-t from-purple-600 to-purple-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 ">Dividend Stocks<br/>6-8%</div>
+      <div className="text-center flex flex-col items-center">
+        <div className="w-12 h-20 bg-blue-500 rounded-t mb-1"></div>
+        <div className="text-xs font-semibold text-blue-500">Dividend Stocks</div>
       </div>
-      <div className="text-center group">
-        <div className="w-16 h-28 bg-gradient-to-t from-amber-600 to-amber-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 ">Growth Stocks<br/>8-12%</div>
+      <div className="text-center flex flex-col items-center">
+        <div className="w-12 h-24 bg-blue-600 rounded-t mb-1"></div>
+        <div className="text-xs font-semibold text-blue-600">Growth Stocks</div>
       </div>
-      <div className="text-center group">
-        <div className="w-16 h-40 bg-gradient-to-t from-red-600 to-red-400 rounded-t mb-2 group-hover:scale-105 transition-transform shadow-lg"></div>
-        <div className="text-xs font-semibold text-slate-700 ">Individual Stocks<br/>-50% to +100%</div>
+      <div className="text-center flex flex-col items-center">
+        <div className="w-12 h-32 bg-blue-700 rounded-t mb-1"></div>
+        <div className="text-xs font-semibold text-blue-700">Individual Stocks</div>
       </div>
     </div>
-
-    <div className="flex justify-between items-center text-sm text-slate-600 ">
+    <div className="flex justify-between items-center text-xs text-gray-500">
       <span className="flex items-center gap-2">
-        <div className="w-3 h-3 bg-slate-700 rounded-full"></div>
+        <div className="w-2 h-2 bg-blue-200 rounded-full"></div>
         Lower Risk
       </span>
       <span className="flex items-center gap-2">
         Higher Risk
-        <div className="w-3 h-3 bg-slate-700 rounded-full"></div>
+        <div className="w-2 h-2 bg-blue-800 rounded-full"></div>
       </span>
     </div>
   </div>
