--- a/trading/market-fundamentals.mdx
+++ b/trading/market-fundamentals.mdx
@@ -120,21 +120,9 @@ icon: 'chart-line'
   </div>
 </div>
 
-<div className="bg-slate-900  border border-slate-800  rounded-xl p-6 my-8">
-  <div className="flex items-start gap-4">
-    <div className="w-8 h-8 bg-slate-700 rounded-full flex items-center justify-center flex-shrink-0">
-      <svg className="w-4 h-4 text-white" fill="currentColor" viewBox="0 0 20 20">
-        <path fillRule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clipRule="evenodd" />
-      </svg>
-    </div>
-    <div>
-      <h4 className="font-semibold text-gray-800 dark:text-gray-200 mb-2">Remember</h4>
-      <p className="text-slate-300 ">
+<Warning>
         Higher potential returns always come with higher risk. Never invest more than you can afford to lose.
-      </p>
-    </div>
-  </div>
-</div>
+</Warning>
 
 ## Economic Indicators: Reading the Market's Vital Signs
 
@@ -156,7 +144,7 @@ icon: 'chart-line'
   <div className="bg-slate-900 p-6 rounded-xl border border-slate-800">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
-        <Icon icon="arrow-up" size={20} className="text-green-400" />
+        <Icon icon="triangle-alert" size={20} className="text-green-400" />
       </div>
       <h4 className="font-bold text-slate-100">Leading Indicators</h4>
     </div>
