refactor: streamline content and enhance clarity in Economic Indicators section

--- a/trading/market-fundamentals.mdx
+++ b/trading/market-fundamentals.mdx
@@ -126,221 +126,28 @@ icon: 'chart-line'
 
 ## Economic Indicators: Reading the Market's Vital Signs
 
-<div className="bg-slate-900 p-6 rounded-xl border border-slate-800 mb-8">
-  <h3 className="text-xl font-bold text-slate-100 mb-4">Understanding Economic Data</h3>
-  <p className="text-slate-300 mb-4">
-    Economic indicators are statistical measures that provide insights into the overall health and direction of the economy. These data points influence investor sentiment, corporate earnings expectations, and ultimately, stock prices.
-  </p>
+Economic indicators are statistics that provide insights into the health and direction of the economy. These data points influence investor sentiment, corporate earnings, and stock prices.
 
-  <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
-    <h4 className="text-slate-200 font-semibold mb-2">Why Economic Indicators Matter for Investors</h4>
-    <p className="text-slate-400 text-sm">
-      Markets are forward-looking mechanisms that price in future economic conditions. By understanding key economic indicators, you can anticipate market movements and position your portfolio accordingly. Economic data doesn't just affect individual stocks—it shapes entire market cycles.
-    </p>
-  </div>
-</div>
+Why do they matter?
 
-<div className="grid grid-cols-1 md:grid-cols-3 gap-6 my-8">
-  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
-        <Icon icon="triangle-alert" size={20} className="text-green-400" />
-      </div>
-      <h4 className="font-bold text-slate-100">Leading Indicators</h4>
-    </div>
-    <div className="space-y-3 text-sm">
-      <p className="text-slate-300">Predict future economic activity and market direction</p>
-      <div className="space-y-2">
-        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
-          <h5 className="text-slate-200 font-medium">Stock Market Performance</h5>
-          <p className="text-slate-400 text-xs">Markets often anticipate economic changes 6-9 months ahead</p>
-        </div>
-        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
-          <h5 className="text-slate-200 font-medium">Consumer Confidence</h5>
-          <p className="text-slate-400 text-xs">High confidence leads to increased spending and economic growth</p>
-        </div>
-        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
-          <h5 className="text-slate-200 font-medium">Building Permits</h5>
-          <p className="text-slate-400 text-xs">Construction activity predicts future economic expansion</p>
-        </div>
-      </div>
-    </div>
-  </div>
+- Markets are forward-looking and price in future economic conditions.
+- Understanding key indicators helps you anticipate market movements and position your portfolio.
+- Economic data shapes entire market cycles, not just individual stocks.
 
-  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
-        <Icon icon="activity" size={20} className="text-blue-400" />
-      </div>
-      <h4 className="font-bold text-slate-100">Coincident Indicators</h4>
-    </div>
-    <div className="space-y-3 text-sm">
-      <p className="text-slate-300">Reflect current state of economic activity</p>
-      <div className="space-y-2">
-        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
-          <h5 className="text-slate-200 font-medium">GDP Growth</h5>
-          <p className="text-slate-400 text-xs">Measures total economic output and health</p>
-        </div>
-        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
-          <h5 className="text-slate-200 font-medium">Employment Data</h5>
-          <p className="text-slate-400 text-xs">Jobs numbers reflect current economic strength</p>
-        </div>
-        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
-          <h5 className="text-slate-200 font-medium">Industrial Production</h5>
-          <p className="text-slate-400 text-xs">Manufacturing output indicates economic momentum</p>
-        </div>
-      </div>
-    </div>
-  </div>
+**Types of Economic Indicators:**
 
-  <div className="bg-slate-900 p-6 rounded-xl border border-slate-800">
-    <div className="flex items-center gap-3 mb-4">
-      <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
-        <Icon icon="arrow-down" size={20} className="text-amber-400" />
-      </div>
-      <h4 className="font-bold text-slate-100">Lagging Indicators</h4>
-    </div>
-    <div className="space-y-3 text-sm">
-      <p className="text-slate-300">Confirm trends that have already begun</p>
-      <div className="space-y-2">
-        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
-          <h5 className="text-slate-200 font-medium">Unemployment Rate</h5>
-          <p className="text-slate-400 text-xs">Changes after economic shifts have occurred</p>
-        </div>
-        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
-          <h5 className="text-slate-200 font-medium">Corporate Profits</h5>
-          <p className="text-slate-400 text-xs">Earnings reflect past economic conditions</p>
-        </div>
-        <div className="bg-slate-800 p-3 rounded-lg border border-slate-700">
-          <h5 className="text-slate-200 font-medium">Inflation Rate (CPI)</h5>
-          <p className="text-slate-400 text-xs">Price changes follow economic trends</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-## Market Cycles: Understanding the Rhythm of Markets
-
-<div className="bg-slate-900 p-6 rounded-xl border border-slate-800 mb-8">
-  <h3 className="text-xl font-bold text-slate-100 mb-4">The Four Phases of Market Cycles</h3>
-  <p className="text-slate-300 mb-6">
-    Markets don't move in straight lines—they follow predictable cycles driven by economic conditions, investor psychology, and monetary policy. Understanding these cycles helps you make better investment timing decisions and manage risk appropriately.
-  </p>
-
-  <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div className="space-y-4">
-      <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
-        <h4 className="text-green-400 font-semibold mb-2 flex items-center gap-2">
-          <Icon icon="seedling" size={16} />
-          1. Accumulation Phase
-        </h4>
-        <div className="space-y-2 text-sm">
-          <p className="text-slate-300"><strong>Characteristics:</strong> Market bottoming, high pessimism, low valuations</p>
-          <p className="text-slate-400"><strong>Smart Money:</strong> Institutional investors start buying quality assets</p>
-          <p className="text-slate-400"><strong>Duration:</strong> 3-12 months typically</p>
-          <p className="text-slate-400"><strong>Strategy:</strong> Begin accumulating positions in quality companies</p>
-        </div>
-      </div>
-
-      <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
-        <h4 className="text-blue-400 font-semibold mb-2 flex items-center gap-2">
-          <Icon icon="trending-up" size={16} />
-          2. Markup Phase
-        </h4>
-        <div className="space-y-2 text-sm">
-          <p className="text-slate-300"><strong>Characteristics:</strong> Rising prices, improving sentiment, expanding valuations</p>
-          <p className="text-slate-400"><strong>Public Entry:</strong> Retail investors start participating</p>
-          <p className="text-slate-400"><strong>Duration:</strong> 1-3 years in major cycles</p>
-          <p className="text-slate-400"><strong>Strategy:</strong> Hold positions, avoid over-trading</p>
-        </div>
-      </div>
-    </div>
-
-    <div className="space-y-4">
-      <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
-        <h4 className="text-amber-400 font-semibold mb-2 flex items-center gap-2">
-          <Icon icon="pause" size={16} />
-          3. Distribution Phase
-        </h4>
-        <div className="space-y-2 text-sm">
-          <p className="text-slate-300"><strong>Characteristics:</strong> Market topping, euphoria, stretched valuations</p>
-          <p className="text-slate-400"><strong>Smart Money:</strong> Institutions start selling to retail investors</p>
-          <p className="text-slate-400"><strong>Duration:</strong> 3-18 months typically</p>
-          <p className="text-slate-400"><strong>Strategy:</strong> Begin taking profits, increase cash positions</p>
-        </div>
-      </div>
-
-      <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
-        <h4 className="text-red-400 font-semibold mb-2 flex items-center gap-2">
-          <Icon icon="trending-down" size={16} />
-          4. Decline Phase
-        </h4>
-        <div className="space-y-2 text-sm">
-          <p className="text-slate-300"><strong>Characteristics:</strong> Falling prices, panic selling, fear dominates</p>
-          <p className="text-slate-400"><strong>Public Exit:</strong> Retail investors sell at the worst times</p>
-          <p className="text-slate-400"><strong>Duration:</strong> 6 months to 2 years</p>
-          <p className="text-slate-400"><strong>Strategy:</strong> Preserve capital, prepare for next cycle</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-## Investment Psychology: Mastering Your Emotions
-
-<div className="bg-slate-900 p-6 rounded-xl border border-slate-800 mb-8">
-  <h3 className="text-xl font-bold text-slate-100 mb-4">The Psychology of Market Movements</h3>
-  <p className="text-slate-300 mb-6">
-    Markets are driven by human emotions—fear and greed being the primary forces. Understanding market psychology helps you avoid common behavioral traps that destroy wealth and instead position yourself to benefit from others' emotional mistakes.
-  </p>
-
-  <div className="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
-      <h4 className="text-red-400 font-semibold mb-3">Common Psychological Traps</h4>
-      <div className="space-y-3 text-sm">
-        <div>
-          <h5 className="text-slate-200 font-medium">FOMO (Fear of Missing Out)</h5>
-          <p className="text-slate-400">Buying at market tops because "everyone else is making money"</p>
-        </div>
-        <div>
-          <h5 className="text-slate-200 font-medium">Loss Aversion</h5>
-          <p className="text-slate-400">Holding losing positions too long while selling winners too early</p>
-        </div>
-        <div>
-          <h5 className="text-slate-200 font-medium">Herd Mentality</h5>
-          <p className="text-slate-400">Following the crowd instead of independent analysis</p>
-        </div>
-        <div>
-          <h5 className="text-slate-200 font-medium">Confirmation Bias</h5>
-          <p className="text-slate-400">Only seeking information that confirms existing beliefs</p>
-        </div>
-      </div>
-    </div>
-
-    <div className="bg-slate-800 p-4 rounded-lg border border-slate-700">
-      <h4 className="text-green-400 font-semibold mb-3">Successful Investor Mindset</h4>
-      <div className="space-y-3 text-sm">
-        <div>
-          <h5 className="text-slate-200 font-medium">Contrarian Thinking</h5>
-          <p className="text-slate-400">"Be fearful when others are greedy, greedy when others are fearful"</p>
-        </div>
-        <div>
-          <h5 className="text-slate-200 font-medium">Long-term Focus</h5>
-          <p className="text-slate-400">Making decisions based on years, not days or weeks</p>
-        </div>
-        <div>
-          <h5 className="text-slate-200 font-medium">Emotional Discipline</h5>
-          <p className="text-slate-400">Sticking to your investment plan regardless of market noise</p>
-        </div>
-        <div>
-          <h5 className="text-slate-200 font-medium">Continuous Learning</h5>
-          <p className="text-slate-400">Adapting strategies based on new information and experience</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+- **Leading Indicators** (predict future activity): Predict future economic activity and market direction
+  - Stock Market Performance: Markets often anticipate economic changes 6-9 months ahead
+  - Consumer Confidence: High confidence leads to increased spending and economic growth
+  - Building Permits: Construction activity predicts future economic expansion
+- **Coincident Indicators** (reflect current activity): Reflect current state of economic activity
+  - GDP Growth: Measures total economic output and health
+  - Employment Data: Jobs numbers reflect current economic strength
+  - Industrial Production: Manufacturing output indicates economic momentum
+- **Lagging Indicators** (confirm trends): Confirm trends that have already begun
+  - Unemployment Rate: Reflects the percentage of the labor force that is unemployed
+  - Corporate Profits: Indicates the profitability of businesses and overall economic health
+  - Inflation Rate (CPI): Measures the rate of price increases in the economy
 
 ## Building Your Market Fundamentals Knowledge
 
@@ -350,7 +157,7 @@ icon: 'chart-line'
       <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
         <Icon icon="book-open" size={20} className="text-white" />
       </div>
-      <h4 className="font-bold text-slate-100">Continue Learning</h4>
+      <span className="font-bold text-slate-100">Continue Learning</span>
     </div>
     <p className="text-slate-300 text-sm mb-4">
       Deepen your understanding of financial analysis and company evaluation techniques.
@@ -363,9 +170,9 @@ icon: 'chart-line'
   <div className="bg-slate-900 p-6 rounded-xl border border-slate-800 hover:border-slate-700 transition-colors">
     <div className="flex items-center gap-3 mb-4">
       <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
-        <Icon icon="trending-up" size={20} className="text-white" />
+        <Icon icon="rainbow" size={20} className="text-white" />
       </div>
-      <h4 className="font-bold text-slate-100">Apply Your Knowledge</h4>
+      <span className="font-bold text-slate-100">Apply Your Knowledge</span>
     </div>
     <p className="text-slate-300 text-sm mb-4">
       Learn how to combine fundamental and technical analysis for better investment decisions.
@@ -380,7 +187,7 @@ icon: 'chart-line'
       <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
         <Icon icon="shield-check" size={20} className="text-white" />
       </div>
-      <h4 className="font-bold text-slate-100">Manage Risk</h4>
+      <span className="font-bold text-slate-100">Manage Risk</span>
     </div>
     <p className="text-slate-300 text-sm mb-4">
       Understand how to protect your capital through proper risk management techniques.
@@ -395,7 +202,7 @@ icon: 'chart-line'
       <div className="w-10 h-10 bg-slate-700 rounded-lg flex items-center justify-center">
         <Icon icon="globe" size={20} className="text-white" />
       </div>
-      <h4 className="font-bold text-slate-100">Explore Markets</h4>
+      <span className="font-bold text-slate-100">Explore Markets</span>
     </div>
     <p className="text-slate-300 text-sm mb-4">
       Discover different market structures and how they affect your investment strategy.
@@ -406,15 +213,11 @@ icon: 'chart-line'
   </div>
 </div>
 
-<div className="bg-slate-800 p-6 rounded-xl border border-slate-700 my-8">
+<Info className="bg-slate-800 p-6 rounded-xl border border-slate-700 my-8">
   <div className="flex items-center gap-3 mb-4">
-    <Icon icon="lightbulb" size={24} className="text-amber-400" />
-    <h3 className="text-xl font-bold text-slate-100">Key Takeaway</h3>
+    <span className="text-xl font-bold text-slate-100">Key Takeaway</span>
   </div>
-  <p className="text-slate-300 mb-4">
-    Market fundamentals provide the foundation for all successful investing. By understanding economic indicators, market cycles, and investor psychology, you can make informed decisions that align with long-term market realities rather than short-term emotions.
-  </p>
   <p className="text-slate-400 text-sm">
-    Remember: Markets can remain irrational longer than you can remain solvent. Always invest with a long-term perspective, proper risk management, and a clear understanding of your own psychological biases.
+    Markets can remain irrational longer than you can remain solvent. Always invest with a long-term perspective, proper risk management, and a clear understanding of your own psychological biases.
   </p>
-</div>
+</Info>
